# chuniforce_calc

./: .gitignore  main.py  pyproject.toml  wrangler.toml
src/: calc.py  entry.py  redisDict.py  ttl_dict.py  utils.py
static/css/: table_render.css
templates/: table_render.html
