[project]
name = "chuniforce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "jwt>=1.4.0",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
